@@ -20,22 +20,22 @@ SHA256 9a93b96b95314d46e3d68d9e50b667758689c214c4398436e1959b42eeddb5f2 files/am
 DIST amavisd-new-2.4.1.tar.gz 841988 RMD160 edd91dde774838345159064ef6012f7927d5aa6c SHA1 1de9fdac377c58a29a93c8a246553c8e363b212c SHA256 c067cbae60ccff3932574fcaf7971c04b118f6b2e9fe6db772d33538b53b0a54
 DIST amavisd-new-2.5.2.tar.gz 788546 RMD160 b7bc998ac34428b62cf74e1c114b295a9f322652 SHA1 2465131448ce10dac8511450695ff63bc565e6db SHA256 5f590850c505017c2633f47ced483aae23ec857e2a782f763eb16f9f9f3fceef
 DIST amavisd-new-2.5.3.tar.gz 789275 RMD160 49b97ff3782b42f8aaba7beb73440398d83638d9 SHA1 2e1460ad505ad4251a876ec506d021a392c7c0c0 SHA256 f724654e15eab3fabce22873a5f2a0fcf2db9374ca84979cf066a29360ee533d
-EBUILD amavisd-new-2.4.1.ebuild 5092 RMD160 abcadc650b7b9cb9cc0cba7bccd0e1c4aae440cc SHA1 a5f5028f16f42d9c66e98ec423ecbd7a88117a55 SHA256 d3838a7ae03447486c5afe36d91b5a894f59fb9d9673fe9da4a9bde8116a82fb
-MD5 209d20427916af725c3f63e67b60f525 amavisd-new-2.4.1.ebuild 5092
-RMD160 abcadc650b7b9cb9cc0cba7bccd0e1c4aae440cc amavisd-new-2.4.1.ebuild 5092
-SHA256 d3838a7ae03447486c5afe36d91b5a894f59fb9d9673fe9da4a9bde8116a82fb amavisd-new-2.4.1.ebuild 5092
-EBUILD amavisd-new-2.5.2.ebuild 5111 RMD160 d8fbb0168191c42352a1a2c38ff544b20d74c46b SHA1 dfb5e8ab7e8918f73e2c44bec5a1d6878f515c1b SHA256 5031396e5b02c5b97cd26db86438ff80c59f84aaaea5789139b414293adca703
-MD5 abf5491baa967816d9a5ac7581580ecf amavisd-new-2.5.2.ebuild 5111
-RMD160 d8fbb0168191c42352a1a2c38ff544b20d74c46b amavisd-new-2.5.2.ebuild 5111
-SHA256 5031396e5b02c5b97cd26db86438ff80c59f84aaaea5789139b414293adca703 amavisd-new-2.5.2.ebuild 5111
-EBUILD amavisd-new-2.5.3.ebuild 5028 RMD160 8ac4d3356f74d678cc6f70c30b22331c4125d277 SHA1 2580969a46c75a77f3d71e40d63d6ceba635e9dd SHA256 1be963436b1188358f642eeeb063c7f40f1c3fe5d2215b6b0961f5f5bbc7d39a
-MD5 125184b22e7feb3bac614529442e7011 amavisd-new-2.5.3.ebuild 5028
-RMD160 8ac4d3356f74d678cc6f70c30b22331c4125d277 amavisd-new-2.5.3.ebuild 5028
-SHA256 1be963436b1188358f642eeeb063c7f40f1c3fe5d2215b6b0961f5f5bbc7d39a amavisd-new-2.5.3.ebuild 5028
-MISC ChangeLog 24535 RMD160 0b503abe6a5352161c9ca4f57c40924f4a1bdfd1 SHA1 55b0fac31e3eb1025c4c39e1a920cee2639b1e8e SHA256 5788a8b2a89bfc290f4c81f60e752dca5d20a3fb0b17546c9929fb1ef187c42d
-MD5 1a49e3aa2213449663d5c4682a10403e ChangeLog 24535
-RMD160 0b503abe6a5352161c9ca4f57c40924f4a1bdfd1 ChangeLog 24535
-SHA256 5788a8b2a89bfc290f4c81f60e752dca5d20a3fb0b17546c9929fb1ef187c42d ChangeLog 24535
+EBUILD amavisd-new-2.4.1.ebuild 5112 RMD160 c40e9e25a071f59efdfc0fc9f19f63581e45af5b SHA1 b212129f4db110f7c9d62188b48e1f60f954b58c SHA256 31bd1f08ae46576607535650a6e9358bcef9cd312bb0441d04922a3d5cdd195a
+MD5 bae9df40fd8366a1f1461f0b386d3af1 amavisd-new-2.4.1.ebuild 5112
+RMD160 c40e9e25a071f59efdfc0fc9f19f63581e45af5b amavisd-new-2.4.1.ebuild 5112
+SHA256 31bd1f08ae46576607535650a6e9358bcef9cd312bb0441d04922a3d5cdd195a amavisd-new-2.4.1.ebuild 5112
+EBUILD amavisd-new-2.5.2.ebuild 5131 RMD160 bf47caf16048667ca021ecdf069804de1f7c324b SHA1 0fb7518847a77ef8e8f3dee068ec37c477e29105 SHA256 e573ec26d139b15b0552dc2c7251b4d176f7ddf5e211fd735f4805b63b54a7b3
+MD5 d6be3e94eeeeafcba12a7c5d0545e280 amavisd-new-2.5.2.ebuild 5131
+RMD160 bf47caf16048667ca021ecdf069804de1f7c324b amavisd-new-2.5.2.ebuild 5131
+SHA256 e573ec26d139b15b0552dc2c7251b4d176f7ddf5e211fd735f4805b63b54a7b3 amavisd-new-2.5.2.ebuild 5131
+EBUILD amavisd-new-2.5.3.ebuild 5048 RMD160 53ae8e022c2d69349b1c91821d608f2f294a25ec SHA1 a7bdafe0066e473cc622e9c03ccb4a63a9fc581f SHA256 1dc52b0711d2e27c7abb5cbcf2cf7b124eae6123eea40bd58cdc6c282ac21c84
+MD5 68f048667ae949d2491535d69e037357 amavisd-new-2.5.3.ebuild 5048
+RMD160 53ae8e022c2d69349b1c91821d608f2f294a25ec amavisd-new-2.5.3.ebuild 5048
+SHA256 1dc52b0711d2e27c7abb5cbcf2cf7b124eae6123eea40bd58cdc6c282ac21c84 amavisd-new-2.5.3.ebuild 5048
+MISC ChangeLog 24838 RMD160 5d9194f7dffd62a4f2c849a3a832c3c9b14531f7 SHA1 8f51eb9f8405d37c55c4cc70f72f8da93274d9ce SHA256 3505838efd14a9d4c5ec43dd348d5eb5c9d9e0276339db92408c3416bc96a3e1
+MD5 d10e033fb27fc6898e465ffd5a21be89 ChangeLog 24838
+RMD160 5d9194f7dffd62a4f2c849a3a832c3c9b14531f7 ChangeLog 24838
+SHA256 3505838efd14a9d4c5ec43dd348d5eb5c9d9e0276339db92408c3416bc96a3e1 ChangeLog 24838
 MISC metadata.xml 184 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 SHA1 cc0a188d9ad2411e78747326c62dd046bd5413c8 SHA256 d51011aa837db802ef539a1321a4af0a4a00879d475b92fd58f3c01df7320b58
 MD5 7e32edfd72887a57b16ecd73f0f7a1a0 metadata.xml 184
 RMD160 c37bff1fc1cd7139c91dae9b0fa5082e1d81f153 metadata.xml 184
@@ -52,7 +52,7 @@ SHA256 cd4da2ef6e605382f19d947b091ac793a4bdca2afc28b3b8c7e5a929f9ce6eb7 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.7 (GNU/Linux)
 
-iD8DBQFHc5jcQlM6RnzZP+IRAjT5AJ45BFNlDVyL/DSuqD7gOqrxVFOG/ACghXft
-9p/7yhf4B4xgAfpjfAXfYOg=
-=DyaD
+iD8DBQFHc53yQlM6RnzZP+IRAvHOAKCZonOcAY154t8plk6+jOKRYn9DwgCghM5U
++T+thAkz2z2mT3Izqm0g3Ko=
+=lpwt
 -----END PGP SIGNATURE-----
